[package]
name = "phenotype_tracing"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Tracing utilities for Phenotype services"
repository = "https://github.com/phenotype-dev/phenotype-tracing"
readme = "README.md"

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
